added loading, error screens

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
               </div>
             </div>
           </section>
-          <div
+          <section
             class="section hourly-forecast"
             aria-label="hourly forecast"
             data-hourly-forecast
@@ -513,31 +513,41 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </section>
+          <footer class="footer">
+            <p class="body-3">
+              © Copyright 2023 Yeswanth Sai Inturi. All rights reserved.
+            </p>
+            <p class="body-3">
+              Powered By
+              <a
+                href="https://openweathermap.org/api"
+                title="Free OpenWeather Api"
+                target="_blank"
+                rel="noopener"
+              >
+                <img
+                  src="./assets/images/openweather.png"
+                  width="150"
+                  height="30"
+                  loading="lazy"
+                  alt="OpenWeather"
+                />
+              </a>
+            </p>
+          </footer>
         </div>
-        <footer class="footer">
-          <p class="body-3">
-            © Copyright 2023 Yeswanth Sai Inturi. All rights reserved.
-          </p>
-          <p class="body-3">
-            Powered By
-            <a
-              href="https://openweathermap.org/api"
-              title="Free OpenWeather Api"
-              target="_blank"
-              rel="noopener"
-            >
-              <img
-                src="./assets/images/openweather.png"
-                width="150"
-                height="30"
-                loading="lazy"
-                alt="OpenWeather"
-              />
-            </a>
-          </p>
-        </footer>
+
+        <div class="loading" data-loading></div>
       </article>
     </main>
+
+    <section class="error-content" data-error-content>
+      <h2 class="heading">404</h2>
+      <p class="body-1">Page Not Found</p>
+      <a href="#" class="btn-primary">
+        <span class="span">Go home</span>
+      </a>
+    </section>
   </body>
 </html>
