html/css template done

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               class="search-field searching"
               data-search-field
             />
-            <span class="m-icon">search</span>
+            <span class="m-icon leading-icon">search</span>
 
             <button
               class="icon-btn"
@@ -225,7 +225,7 @@
             aria-labelledby="highlights-label"
             data-highlights
           >
-            <div class="card card">
+            <div class="card card-lg">
               <h2 class="title-2" id="highlights-label">Todays Highlights</h2>
               <div class="highlight-list">
                 <div class="card card-sm highlight-card one">
